@@ -1,5 +1,14 @@
 2011-10-23  Kaz Kylheku  <kaz@kylheku.com>
 
+	* match.c (list_k, string_k): New keyword symbol variables.
+	(v_next): Implement :list and :string keywords.
+	(syms_init): New keyword variables initialized.
+	NOTE: the :var keyword is deprecated.
+
+	* txr.1: Documented :list and :string.
+
+2011-10-23  Kaz Kylheku  <kaz@kylheku.com>
+
 	* match.c (h_skip): Bugfix: bad agument list in debugf call.
 
 2011-10-22  Kaz Kylheku  <kaz@kylheku.com>
